Fixed the tailwind keyword and deleted all z-index problematic files

--- a/src/Parallax/ParallaxVideo.css
+++ b/src/Parallax/ParallaxVideo.css
@@ -6,13 +6,13 @@
 }
 
 
-body,
+/* body,
 html {
     margin: 0;
     padding: 0;
     height: 100%;
     overflow: hidden;
-}
+} */
 
 
 .video-container {
