--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,4 @@
   background-color: red;
 }
 
-body
-{
-  background-color: black;
-}
+/* From here the real Css */
